--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,18 +1,34 @@
+:root {
+  --dark: #010612;
+  --light: #fff7fe;
+  --bi-pink: #D60270;
+  --bi-purple: #9B4F96;
+  --bi-blue: #0038A8;
+}
 
 * {
   margin:0;
   padding:0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 
+html{
+  background-color: var(--dark);
+  /* bi flag blue but dark */
+  color: var(--light);
+  /* bi flag pink but whiter */
+  font-size: 18px;
+  /* set base font size */
+  text-transform: uppercase;
 }
 canvas {
   display:block;
 }
 
 #c {
-  width:100vw;
-  height:100vh;
-  position:fixed;
+  height: 100%;
+  width: 100%;
+  position: absolute;
   top:0;
   left:0;
   z-index: -1;
@@ -28,14 +44,6 @@ canvas {
   top:0;
   left:0;
   z-index: 1;
-}
-
-.placeh{
-  border: 2px solid white;
-  margin: 10vw;
-  width: 300px;
-  height: 300px;
-
 }
 
 
