add a little flourish to the border

--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,16 +1,22 @@
 .hero {
-  outline: 1px solid red;
-  position: relative;
-  height: 33vmin;
+  min-height: 33vmin;
   display: grid;
   place-items: center;
   text-transform: uppercase;
-  clip-path: polygon(100% 0%, 0% 0% , 0.00% 100.00%, 3.33% 99.74%, 6.67% 98.99%, 10.00% 97.80%, 13.33% 96.27%, 16.67% 94.51%, 20.00% 92.66%, 23.33% 90.87%, 26.67% 89.26%, 30.00% 87.96%, 33.33% 87.08%, 36.67% 86.69%, 40.00% 86.80%, 43.33% 87.42%, 46.67% 88.49%, 50.00% 89.94%, 53.33% 91.65%, 56.67% 93.49%, 60.00% 95.31%, 63.33% 96.99%, 66.67% 98.38%, 70.00% 99.38%, 73.33% 99.92%, 76.67% 99.95%, 80.00% 99.47%, 83.33% 98.51%, 86.67% 97.16%, 90.00% 95.51%, 93.33% 93.70%, 96.67% 91.85%, 100.00% 90.12%);
+  position: relative;
+}
+
+.hero svg {
+  align-self: flex-end;
+  width: 100%;
+  height: auto;
 }
 
 h1 {
   font-size: 3.5em;
   font-weight: 700;
+  width: 100%;
+  text-align: center;
 }
 
 .content {
@@ -20,6 +26,10 @@ h1 {
 
 h2 {
   margin: 1.5em 0;
+}
+
+h2:first-child {
+  margin-top: 0;
 }
 
 p {
@@ -68,4 +78,22 @@ h2:hover {
   flex: 0.25 1 max-content;
   text-align: center;
 
+}
+
+.stroke-1 {
+  fill: var(--bi-purple);
+  /* display: none; */
+}
+
+.stroke-2 {
+  fill: var(--bi-pink);
+  /* display: none; */
+}
+
+.stroke-3 {
+  fill: var(--bi-blue);
+}
+
+.stroke-4 { 
+  fill: var(--dark);
 }
