--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,7 +1,8 @@
 .hero {
-  min-height: 33vmin;
+  min-height: 350px;
+  height: 33vmin;
   display: grid;
-  place-items: center;
+  place-items: end;
   text-transform: uppercase;
   position: relative;
 }
@@ -52,6 +53,7 @@ nav {
 }
 
 h2:hover, .link:hover {
+  color: var(--dark);
   text-shadow: -3px 1px 2px var(--bi-pink), 3px -2px 2px var(--bi-purple), 2px -2px 3px var(--bi-blue);
 }
 
