--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,12 +7,12 @@
 }
 
 * {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-html{
+html {
   background-color: var(--dark);
   /* bi flag blue but dark */
   color: var(--light);
@@ -21,29 +21,46 @@ html{
   /* set base font size */
   text-transform: uppercase;
 }
-canvas {
-  display:block;
+
+canvas,
+svg {
+  display: none;
 }
 
 #c {
   height: 100%;
   width: 100%;
   position: absolute;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   z-index: -1;
 }
 
 /* Project Styles */
 
 #content {
-  /* border: 3px solid red; */
-  width:100vw;
-  height:100vh;
-  position:fixed;
-  top:0;
-  left:0;
-  z-index: 1;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+#theme-toggle {
+  background-color: var(--dark);
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  font-size: 50%;
+  text-transform: lowercase;
+  display: flex;
+  gap: 1em;
+  padding: 0.5em;
+}
+
+#theme-toggle>div {
+  display: flex;
+  gap: 0.5em;
 }
 
 
