--- a/src/styles/project.css
+++ b/src/styles/project.css
@@ -1,6 +1,9 @@
-:root {
-  --min-height: 450px;
-  --max-height: 900px
+@font-face {
+  font-family: 'something-unfriendly';
+  src: url('../assets/fonts/something-unfriendly.otf');
+  font-weight: bold;
+  font-style: normal;
+  font-display: block;
 }
 
 * {
@@ -8,29 +11,100 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
-  border: 16px solid blue;
-  height: max(var(--min-height), 100vh);
-  width: 100vw;
-  overflow: auto;
+  height: 100vh;
+  background: radial-gradient(circle at center, rgb(70, 1, 1) 33%, black);
 }
+
+h1 {
+  position: absolute;
+  font-family: 'something-unfriendly';
+  writing-mode: vertical-lr;
+  text-orientation: upright;
+  text-transform: uppercase;
+  background-color: white;
+  color: black;
+  font-size: 1.75em;
+  letter-spacing: -0.8em;
+  padding: 1em 0 1em;
+  line-height: 1.5em;
+  left: 10%;
+  top: 0;
+  z-index: 20;
+  padding-block: 0.5em;
+  padding-inline: 1.75em;
+ }
+
 main {
   position: relative;
-  border: 16px solid red;
   width: 100%;
   height: 100%;
 }
+
 img {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 90%;
-  /* mix-blend-mode: color-burn; */
+  height: 87%;
+  z-index: -1;
+  pointer-events: none;
 }
-.color-burn {
-  mix-blend-mode: color-burn;
 
+.color-burn {
+  mix-blend-mode: lighten;
 }
-#hair {
+
+.color-lighten {
+  mix-blend-mode: difference;
+}
+
+#container {
+  background-color: black;
+  cursor: pointer;
+  position: relative;
+  border: 1.5em double red;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 900px;
+  width: 600px;
+}
+
+#canvas, #viz {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80%;
+  height: 87%;
+  transform: translate(-50%, -50%);
+}
+
+#c {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+  border: 3.5em solid black;
+}
+
+#canvas {
+  mask-image: url(../assets/medusa-outline.png);
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: center;
+}
+
+#squat {
+  display: none;
+}
+
+#outline {
+  z-index: 1;
 }
