--- a/src/styles/themes/minimal.css
+++ b/src/styles/themes/minimal.css
@@ -1,4 +1,10 @@
 body[data-theme="minimal"] {
+  --hover-box-shadow:
+    -2px -2px 5px var(--bi-blue),
+    0px 3px 5px var(--bi-purple),
+    3px 2px 5px var(--bi-purple),
+    0px -5px 5px var(--bi-blue);
+
   .hero {
     min-height: 350px;
     height: 33vmin;
@@ -6,7 +12,40 @@ body[data-theme="minimal"] {
     place-items: end;
     text-transform: uppercase;
     position: relative;
+    overflow: hidden;
+    background-image: linear-gradient(to top, var(--bi-blue) 25%, var(--bi-purple) 75%, var(--bi-pink));
+    
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      height: min(50vw, 320px);
+      width: min(50vw, 320px);
+    }
+    
+    &::after {
+      filter: blur(1px);
+      background-image: linear-gradient(to bottom, var(--bi-blue), var(--bi-purple), var(--bi-pink));
+    }
+
+    &::before {
+      background-image: repeating-linear-gradient(transparent,
+          transparent 10px,
+          black 10px,
+          black 20px);
+      clip-path: rect(50% 100% 100% 0%);
+      animation: mymove 45s linear infinite;
+
+      background-size: 100% 50%;
+    }
+
   }
+
+
 
   canvas,
   svg {
@@ -17,13 +56,16 @@ body[data-theme="minimal"] {
     align-self: flex-end;
     width: 100%;
     height: auto;
+    z-index: 2;
   }
+
 
   h1 {
     font-size: 3.5em;
     font-weight: 700;
     width: 100%;
     text-align: center;
+    z-index: 2;
   }
 
   .content {
@@ -56,30 +98,33 @@ body[data-theme="minimal"] {
   }
 
   nav {
-    border-bottom: 0.25em solid var(--bi-purple);
+    border-bottom: 0.25em solid var(--bi-blue);
   }
 
+  h1:hover,
   h2:hover,
   .link:hover {
     color: var(--bi-pink);
     text-shadow: 2px 0px 2px var(--bi-purple), -2px 0px 2px var(--bi-blue);
   }
 
+  h1:hover,
   h2:hover {
     text-decoration: underline var(--bi-blue);
   }
 
   .link:hover {
     cursor: pointer;
-    text-decoration: overline var(--bi-pink);
+    box-shadow: var(--hover-box-shadow);
   }
 
   .links .wrap {
     flex: 1 1 0;
     display: flex;
-    column-gap: 1em;
+    gap: 0.5em 1em;
     flex-wrap: wrap;
     justify-content: flex-end;
+    align-items: flex-start;
   }
 
   .link.home,
@@ -87,6 +132,7 @@ body[data-theme="minimal"] {
     font-size: 1.33em;
     flex: 0.25 1 max-content;
     text-align: center;
+    align-self: flex-start;
 
   }
 
@@ -104,5 +150,15 @@ body[data-theme="minimal"] {
 
   .stroke-4 {
     fill: var(--dark);
+  }
+}
+
+@keyframes mymove {
+  from {
+    background-position: 0% 0%;
+  }
+
+  to {
+    background-position: 0% -100%;
   }
 }
