--- a/src/styles/themes/retro.css
+++ b/src/styles/themes/retro.css
@@ -1,60 +1,213 @@
 body[data-theme="retro"] {
-  margin: 1.5em 1em;
-  .links, .wrap {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
+  --hover-box-shadow:
+    -2px -2px 5px var(--bi-blue),
+    0px 3px 5px var(--bi-purple),
+    3px 2px 5px var(--bi-purple),
+    0px -5px 5px var(--bi-blue);
+
+  .hero {
+    min-height: 350px;
+    height: 33vmin;
+    display: grid;
+    place-items: end;
+    text-transform: uppercase;
+    position: relative;
+    overflow: hidden;
+    z-index: 2;
+    background-image: linear-gradient(to top, var(--bi-blue) 25%, var(--bi-purple) 75%, var(--bi-pink));
+    
   }
-  .links {
+  .hero::after {
+    position: absolute;
+    left: -30%;
+    right: -30%;
+    top: 0;
+    bottom: 0;
+    content: "";
+    background-image: linear-gradient(to bottom, white, lavender, pink, cyan, white);
+    mask: linear-gradient(black 1.5px, transparent 1.5px, transparent calc(100% - 1.5px), #1c7cbb calc(100% - 1.5px)), linear-gradient(90deg, #1c7cbb 1.5px, transparent 1.5px, transparent calc(100% - 1.5px), #1c7cbb calc(100% - 1.5px));
+    mask-size: 10% 10%;
+    /* transform: perspective(500px) rotateX(65deg); */
+    mask-repeat: repeat;
+  }
+
+  .sun,
+  .road {
+    position: absolute;
+  }
+
+  main {
+    position: relative;
+    background-color: rebeccapurple;
+    overflow: hidden;
+    z-index: 0;
+  }
+
+  main::after {
+    position: absolute;
+    left: -30%;
+    right: -30%;
+    top: 0;
+    bottom: 0;
+    content: "";
+    background-image: linear-gradient(to bottom, white, lavender, pink, cyan, white);
+    mask: linear-gradient(black 1.5px, transparent 1.5px, transparent calc(100% - 1.5px), #1c7cbb calc(100% - 1.5px)), linear-gradient(90deg, #1c7cbb 1.5px, transparent 1.5px, transparent calc(100% - 1.5px), #1c7cbb calc(100% - 1.5px));
+    mask-size: 10% 10%;
+    transform: perspective(500px) rotateX(65deg);
+    mask-repeat: repeat;
+    z-index: -1;
+  }
+
+  .sun {
+    background-image: linear-gradient(to bottom, var(--bi-blue), var(--bi-purple), var(--bi-pink));
+    transform: translate(-50%, -50%);
+    width: min(50vw, 320px);
+    height: min(50vw, 320px);
+    filter: blur(1px);
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    overflow: hidden;
+    z-index: 2;
+  }
+
+  .road {
+    background-image: repeating-linear-gradient(transparent,
+        transparent 10px,
+        black 10px,
+        black 20px);
+    z-index: 2;
+    height: 50%;
+    bottom: 0;
+    width: 100%;
+    left: 0;
+    width: 100%;
+    animation: mymove 45s linear infinite;
+    background-size: 100% 50%;
+  }
+
+
+  :is(canvas),
+  :is(svg) {
+    display: none;
+  }
+
+  .hero svg {
+    display: none;
+    align-self: flex-end;
+    width: 100%;
+    height: auto;
+    z-index: 2;
+  }
+
+
+  :is(h1) {
+    font-size: 3.5em;
+    font-weight: 700;
+    width: 100%;
+    text-align: center;
+    z-index: 2;
+    background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.66));
+  }
+
+  .content {
+    height: 100%;
+    /* max-width: 50vw; */
+    padding: 10% 25%;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.66), rgba(0,0,0,1));
+    /* background-color: black; */
+    z-index: 4;
+  }
+
+  :is(h2) {
+    margin: 1.5em 0;
+  }
+
+  h2:first-child {
+    margin-top: 0;
+  }
+
+  :is(p) {
+    margin: 1em 0;
+  }
+
+  nav>.links {
+    margin: 0.66em 0.33em;
+    min-height: 10vmin;
     list-style-type: none;
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     gap: 1em;
-  }
-  .home {
-    position: relative;
-    padding: 1em 0.5em;
-    flex-basis: 100%;
-    font-size: 200%;
-    /* background-size: 200% 200%; */
-    /* background-position: 0% 90%; */
-    /* background-color: orange; */
-    /* overflow: hidden; */
-    /* height: 320px; */
-    /* width: 320px; */
-    background: repeating-linear-gradient(transparent 0 10px, black 14px),
-      radial-gradient(
-        80px 80px at 50% 50%,
-        var(--bi-blue),
-        var(--bi-purple),
-        var(--bi-pink)
-      );
-    /* border-radius: 50%; */
-    background-size: 100% 200%, 50% 100%;
-    background-repeat: repeat-y, no-repeat;
-    background-position-y: 20%, center;
-    background-position-x: center, center;
-    animation: rise 6s linear infinite;
-
-  }
-  
-  
-
-  @media (prefers-reduced-motion: no-preference) {
-    .home {
-      will-change: transform;
-    }
+    font-size: 1.5em;
+    font-weight: 700;
   }
 
-  .cart {
-    margin-left: auto;
+  .link {
+    padding: 0.125em 0.25em;
+  }
+
+  nav {
+    border-bottom: 0.25em solid var(--bi-blue);
+  }
+
+  h1:hover,
+  h2:hover,
+  .link:hover {
+    color: var(--bi-pink);
+    text-shadow: 2px 0px 2px var(--bi-purple), -2px 0px 2px var(--bi-blue);
+  }
+
+  h1:hover,
+  h2:hover {
+    text-decoration: underline var(--bi-blue);
+  }
+
+  .link:hover {
+    cursor: pointer;
+    box-shadow: var(--hover-box-shadow);
+  }
+
+  .links .wrap {
+    flex: 1 1 0;
+    display: flex;
+    gap: 0.5em 1em;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: flex-start;
+  }
+
+  .link.home,
+  .link.cart {
+    font-size: 1.33em;
+    text-align: center;
+    align-self: flex-start;
+
+  }
+
+  .stroke-1 {
+    fill: var(--bi-purple);
+  }
+
+  .stroke-2 {
+    fill: var(--bi-pink);
+  }
+
+  .stroke-3 {
+    fill: var(--bi-blue);
+  }
+
+  .stroke-4 {
+    fill: var(--dark);
   }
 }
 
-@keyframes rise {
+@keyframes mymove {
   from {
-    background-position-y: 10%, center;
+    background-position: 0% 0%;
   }
+
   to {
-    background-position-y: 50%, center;
+    background-position: 0% -100%;
   }
 }
