--- a/src/styles/themes/retro.css
+++ b/src/styles/themes/retro.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Russo+One&family=Yellowtail&family=Press+Start+2P&display=swap");
+
 body[data-theme="retro"] {
   --hover-box-shadow:
     -2px -2px 5px var(--bi-blue),
@@ -17,6 +19,7 @@ body[data-theme="retro"] {
     background-image: linear-gradient(to top, var(--bi-blue) 25%, var(--bi-purple) 75%, var(--bi-pink));
     
   }
+
   .hero::after {
     position: absolute;
     left: -30%;
@@ -27,7 +30,6 @@ body[data-theme="retro"] {
     background-image: linear-gradient(to bottom, white, lavender, pink, cyan, white);
     mask: linear-gradient(black 1.5px, transparent 1.5px, transparent calc(100% - 1.5px), #1c7cbb calc(100% - 1.5px)), linear-gradient(90deg, #1c7cbb 1.5px, transparent 1.5px, transparent calc(100% - 1.5px), #1c7cbb calc(100% - 1.5px));
     mask-size: 10% 10%;
-    /* transform: perspective(500px) rotateX(65deg); */
     mask-repeat: repeat;
   }
 
@@ -41,6 +43,8 @@ body[data-theme="retro"] {
     background-color: rebeccapurple;
     overflow: hidden;
     z-index: 0;
+    display: flex;
+    flex-flow: column nowrap;
   }
 
   main::after {
@@ -102,25 +106,38 @@ body[data-theme="retro"] {
 
 
   :is(h1) {
+    font-family: "Russo One";
     font-size: 3.5em;
     font-weight: 700;
     width: 100%;
     text-align: center;
     z-index: 2;
     background-image: linear-gradient(to bottom, transparent, rgba(0,0,0,0.66));
+    background: linear-gradient(
+      cornflowerblue 30%,
+      white,
+      darkmagenta 60%,
+      cornflowerblue 100%
+    ), linear-gradient(to bottom, transparent, rgba(0,0,0,0.66) 50%);
+    -webkit-text-stroke: 0.1px dimgray;
+    background-size: 100% 1.125em, auto;
+    background-repeat: repeat-y, repeat;
+    background-clip: text, border-box;
+    color: transparent;
   }
 
   .content {
     height: 100%;
-    /* max-width: 50vw; */
-    padding: 10% 25%;
+    padding: 3em min(5em, 25%);
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.66), rgba(0,0,0,1));
-    /* background-color: black; */
     z-index: 4;
+    font-family: "Press Start 2P";
   }
 
   :is(h2) {
     margin: 1.5em 0;
+    font-family: inherit;
+    color: gold;
   }
 
   h2:first-child {
@@ -129,6 +146,9 @@ body[data-theme="retro"] {
 
   :is(p) {
     margin: 1em 0;
+    font-family: inherit;
+    line-height: 1.5em;
+    color: gold;
   }
 
   nav>.links {
@@ -151,16 +171,14 @@ body[data-theme="retro"] {
     border-bottom: 0.25em solid var(--bi-blue);
   }
 
-  h1:hover,
-  h2:hover,
-  .link:hover {
+  .link:hover, .link.home:hover, .link.cart:hover {
     color: var(--bi-pink);
     text-shadow: 2px 0px 2px var(--bi-purple), -2px 0px 2px var(--bi-blue);
   }
 
   h1:hover,
   h2:hover {
-    text-decoration: underline var(--bi-blue);
+    text-decoration: underline var(--bi-pink);
   }
 
   .link:hover {
@@ -179,10 +197,11 @@ body[data-theme="retro"] {
 
   .link.home,
   .link.cart {
+    font-family: "Yellowtail";
     font-size: 1.33em;
     text-align: center;
     align-self: flex-start;
-
+    color: var(--bi-purple);
   }
 
   .stroke-1 {
